# ejemplos-rag

./: .env.ejemplo  .env.example  .gitignore  README.md  main.py  pyproject.toml
.continue/rules/: new-rule.md
LangFlow/: Chat Futbol Peruano.json  Crear BC Futbol Peruano.json
ejemplos/: 01_rag_embeddings_diferentes.py  02_recuperar_rag_embeddings.py  03_rag_hibrido.py  04_recuperar_rag_hibrido.py  05_tamano_chunks_diferentes.py  06_estrategia_chunking_diferentes.py  07_agente_rag.py  08_evaluar_agente_rag.py  dataset_ejemplos.py
rag_helper/: __init__.py  build_vector_db.py  custom_docling_loader.py  query_rag.py  qwen_reranker.py  score_relevancia.py
temp/: documento.md  segmentos_finales.txt  segmentos_json.txt  segmentos_texto.txt
test/: foo.py  test_custom_loader.py  test_ocr.py  test_poc.py  test_vlm_docling.py
