[project]
name = "ejemplos-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.82.0",
    "easyocr>=1.7.2",
    "flashrank>=0.2.10",
    "hf-xet>=1.2.0",
    "langchain>=1.2.13",
    "langchain-core>=1.2.22",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-qdrant>=1.1.0",
    "python-dotenv>=1.2.1",
    "qdrant-client[fastembed]>=1.16.2",
    "ragas>=0.4.3",
    "semchunk>=2.2.2",
    "sentence-transformers>=5.3.0",
    "torch>=2.11.0",
]

#Para configurar Pytorch con CUDA, ver detalle en https://docs.astral.sh/uv/guides/integration/pytorch/
[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
